--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                     'Rune': { name: 'Rune hatchet', level: 41, power: 600 },
                     'Dragon': { name: 'Dragon hatchet', level: 61, power: 700 },
                     'Crystal': { name: 'Crystal hatchet', level: 71, power: 800 },
-                    '3rd-age': { name: '3rd Age hatchet', level: 61, power: 700 }
+                    '3rd-age': { name: '3rd Age hatchet', level: 61, power: 700 },
                 },
                 trees: {
                     'Normal': { name: 'Tree', logType: 'Logs', wcLvl: 1, xp: 25, chance: 64, ratio: 3.1250 },
